squirrel_lang/src/parser/snapshots/squirrel_lang__parser__tests__parser-verify-values_and_data_types-float.nut.snap
---
source: squirrel_lang/src/parser/mod.rs
expression: actual_ast
---
keyword_span:
  start: Start
  end: End
arg_span:
  start: Start
  end: End
num_args: 0
default_expr: []
local_names:
  - - vargv
    - 0
  - - a
    - 1
  - - b
    - 2
  - - c
    - 3
  - - d
    - 4
num_locals: 5
upvalues: []
is_varargs: true
body:
  data:
    Block:
      - data:
          Expr:
            data:
              Assign:
                target:
                  Local:
                    - 1
                    - start: Start
                      end: End
                value:
                  data:
                    Literal:
                      Number: 1
                  span:
                    start: Start
                    end: End
                kind: Normal
                op_span:
                  start: Start
                  end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              Assign:
                target:
                  Local:
                    - 2
                    - start: Start
                      end: End
                value:
                  data:
                    Literal:
                      Number: 0.234
                  span:
                    start: Start
                    end: End
                kind: Normal
                op_span:
                  start: Start
                  end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              Assign:
                target:
                  Local:
                    - 3
                    - start: Start
                      end: End
                value:
                  data:
                    Literal:
                      Number: 0.001
                  span:
                    start: Start
                    end: End
                kind: Normal
                op_span:
                  start: Start
                  end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              Assign:
                target:
                  Local:
                    - 4
                    - start: Start
                      end: End
                value:
                  data:
                    UnaryOp:
                      - Neg
                      - start: Start
                        end: End
                      - data:
                          Literal:
                            Number: 0.03
                        span:
                          start: Start
                          end: End
                  span:
                    start: Start
                    end: End
                kind: Normal
                op_span:
                  start: Start
                  end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              FunctionCall:
                func:
                  FieldAccess:
                    - data: Globals
                      span:
                        start: Start
                        end: End
                    - - print
                      - start: Start
                        end: End
                args:
                  - data:
                      BinaryOp:
                        op: Add
                        op_span:
                          start: Start
                          end: End
                        lhs:
                          data:
                            Local:
                              - 1
                              - start: Start
                                end: End
                          span:
                            start: Start
                            end: End
                        rhs:
                          data:
                            Literal:
                              String: "\n"
                          span:
                            start: Start
                            end: End
                    span:
                      start: Start
                      end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              FunctionCall:
                func:
                  FieldAccess:
                    - data: Globals
                      span:
                        start: Start
                        end: End
                    - - print
                      - start: Start
                        end: End
                args:
                  - data:
                      BinaryOp:
                        op: Add
                        op_span:
                          start: Start
                          end: End
                        lhs:
                          data:
                            Local:
                              - 2
                              - start: Start
                                end: End
                          span:
                            start: Start
                            end: End
                        rhs:
                          data:
                            Literal:
                              String: "\n"
                          span:
                            start: Start
                            end: End
                    span:
                      start: Start
                      end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              FunctionCall:
                func:
                  FieldAccess:
                    - data: Globals
                      span:
                        start: Start
                        end: End
                    - - print
                      - start: Start
                        end: End
                args:
                  - data:
                      BinaryOp:
                        op: Add
                        op_span:
                          start: Start
                          end: End
                        lhs:
                          data:
                            Local:
                              - 3
                              - start: Start
                                end: End
                          span:
                            start: Start
                            end: End
                        rhs:
                          data:
                            Literal:
                              String: "\n"
                          span:
                            start: Start
                            end: End
                    span:
                      start: Start
                      end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              FunctionCall:
                func:
                  FieldAccess:
                    - data: Globals
                      span:
                        start: Start
                        end: End
                    - - print
                      - start: Start
                        end: End
                args:
                  - data:
                      BinaryOp:
                        op: Add
                        op_span:
                          start: Start
                          end: End
                        lhs:
                          data:
                            Local:
                              - 4
                              - start: Start
                                end: End
                          span:
                            start: Start
                            end: End
                        rhs:
                          data:
                            Literal:
                              String: "\n"
                          span:
                            start: Start
                            end: End
                    span:
                      start: Start
                      end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
  span:
    start: Start
    end: End
