squirrel_lang/src/parser/snapshots/squirrel_lang__parser__tests__parser-verify-values_and_data_types-integer.nut.snap
---
source: squirrel_lang/src/parser/mod.rs
expression: actual_ast
---
keyword_span:
  start: Start
  end: End
arg_span:
  start: Start
  end: End
num_args: 0
default_expr: []
local_names:
  - - vargv
    - 0
  - - a
    - 1
  - - b
    - 2
  - - c
    - 3
  - - d
    - 4
  - - t
    - 5
  - - f
    - 6
  - - n
    - 7
num_locals: 8
upvalues: []
is_varargs: true
body:
  data:
    Block:
      - data:
          Expr:
            data:
              Assign:
                target:
                  Local:
                    - 1
                    - start: Start
                      end: End
                value:
                  data:
                    Literal:
                      Integer: 123
                  span:
                    start: Start
                    end: End
                kind: Normal
                op_span:
                  start: Start
                  end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              Assign:
                target:
                  Local:
                    - 2
                    - start: Start
                      end: End
                value:
                  data:
                    Literal:
                      Integer: 18
                  span:
                    start: Start
                    end: End
                kind: Normal
                op_span:
                  start: Start
                  end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              Assign:
                target:
                  Local:
                    - 3
                    - start: Start
                      end: End
                value:
                  data:
                    Literal:
                      Integer: 61
                  span:
                    start: Start
                    end: End
                kind: Normal
                op_span:
                  start: Start
                  end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              Assign:
                target:
                  Local:
                    - 4
                    - start: Start
                      end: End
                value:
                  data:
                    Literal:
                      Integer: 119
                  span:
                    start: Start
                    end: End
                kind: Normal
                op_span:
                  start: Start
                  end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              FunctionCall:
                func:
                  FieldAccess:
                    - data: Globals
                      span:
                        start: Start
                        end: End
                    - - print
                      - start: Start
                        end: End
                args:
                  - data:
                      BinaryOp:
                        op: Add
                        op_span:
                          start: Start
                          end: End
                        lhs:
                          data:
                            Local:
                              - 1
                              - start: Start
                                end: End
                          span:
                            start: Start
                            end: End
                        rhs:
                          data:
                            Literal:
                              String: "\n"
                          span:
                            start: Start
                            end: End
                    span:
                      start: Start
                      end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              FunctionCall:
                func:
                  FieldAccess:
                    - data: Globals
                      span:
                        start: Start
                        end: End
                    - - print
                      - start: Start
                        end: End
                args:
                  - data:
                      BinaryOp:
                        op: Add
                        op_span:
                          start: Start
                          end: End
                        lhs:
                          data:
                            Local:
                              - 2
                              - start: Start
                                end: End
                          span:
                            start: Start
                            end: End
                        rhs:
                          data:
                            Literal:
                              String: "\n"
                          span:
                            start: Start
                            end: End
                    span:
                      start: Start
                      end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              FunctionCall:
                func:
                  FieldAccess:
                    - data: Globals
                      span:
                        start: Start
                        end: End
                    - - print
                      - start: Start
                        end: End
                args:
                  - data:
                      BinaryOp:
                        op: Add
                        op_span:
                          start: Start
                          end: End
                        lhs:
                          data:
                            Local:
                              - 3
                              - start: Start
                                end: End
                          span:
                            start: Start
                            end: End
                        rhs:
                          data:
                            Literal:
                              String: "\n"
                          span:
                            start: Start
                            end: End
                    span:
                      start: Start
                      end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              FunctionCall:
                func:
                  FieldAccess:
                    - data: Globals
                      span:
                        start: Start
                        end: End
                    - - print
                      - start: Start
                        end: End
                args:
                  - data:
                      BinaryOp:
                        op: Add
                        op_span:
                          start: Start
                          end: End
                        lhs:
                          data:
                            Local:
                              - 4
                              - start: Start
                                end: End
                          span:
                            start: Start
                            end: End
                        rhs:
                          data:
                            Literal:
                              String: "\n"
                          span:
                            start: Start
                            end: End
                    span:
                      start: Start
                      end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              Assign:
                target:
                  Local:
                    - 5
                    - start: Start
                      end: End
                value:
                  data:
                    Literal:
                      Integer: 1
                  span:
                    start: Start
                    end: End
                kind: Normal
                op_span:
                  start: Start
                  end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              Assign:
                target:
                  Local:
                    - 6
                    - start: Start
                      end: End
                value:
                  data:
                    Literal:
                      Integer: 0
                  span:
                    start: Start
                    end: End
                kind: Normal
                op_span:
                  start: Start
                  end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              Assign:
                target:
                  Local:
                    - 7
                    - start: Start
                      end: End
                value:
                  data:
                    Literal: "Null"
                  span:
                    start: Start
                    end: End
                kind: Normal
                op_span:
                  start: Start
                  end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              FunctionCall:
                func:
                  FieldAccess:
                    - data: Globals
                      span:
                        start: Start
                        end: End
                    - - print
                      - start: Start
                        end: End
                args:
                  - data:
                      BinaryOp:
                        op: Add
                        op_span:
                          start: Start
                          end: End
                        lhs:
                          data:
                            Local:
                              - 5
                              - start: Start
                                end: End
                          span:
                            start: Start
                            end: End
                        rhs:
                          data:
                            Literal:
                              String: "\n"
                          span:
                            start: Start
                            end: End
                    span:
                      start: Start
                      end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              FunctionCall:
                func:
                  FieldAccess:
                    - data: Globals
                      span:
                        start: Start
                        end: End
                    - - print
                      - start: Start
                        end: End
                args:
                  - data:
                      BinaryOp:
                        op: Add
                        op_span:
                          start: Start
                          end: End
                        lhs:
                          data:
                            Local:
                              - 6
                              - start: Start
                                end: End
                          span:
                            start: Start
                            end: End
                        rhs:
                          data:
                            Literal:
                              String: "\n"
                          span:
                            start: Start
                            end: End
                    span:
                      start: Start
                      end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              FunctionCall:
                func:
                  FieldAccess:
                    - data: Globals
                      span:
                        start: Start
                        end: End
                    - - print
                      - start: Start
                        end: End
                args:
                  - data:
                      BinaryOp:
                        op: Add
                        op_span:
                          start: Start
                          end: End
                        lhs:
                          data:
                            Local:
                              - 7
                              - start: Start
                                end: End
                          span:
                            start: Start
                            end: End
                        rhs:
                          data:
                            Literal:
                              String: "\n"
                          span:
                            start: Start
                            end: End
                    span:
                      start: Start
                      end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
  span:
    start: Start
    end: End
